# algebraic-contours

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
cmake/: cli11.cmake  conformal_ideal_delaunay.cmake  hidden_cones.cmake  libigl.cmake  polyscope.cmake
ext/.cache/tbb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ext/.cache/tbb/tbb-download-prefix/src/tbb-download-stamp/: tbb-download-gitclone-lastrun.txt
ext/.cache/tbb/tbb-download-prefix/tmp/: tbb-download-gitclone.cmake  tbb-download-gitupdate.cmake  tbb-download-mkdirs.cmake
ext/svg/: CMakeLists.txt
ext/svg/src/: common.h  svg.cpp  svg.h
figures/: .polyscope.ini  anim-approximation-error.sh  anim-rotation.sh  fig-all.sh  fig-examples.sh  fig-perspective-distortion.sh  fig-smoothness.sh  fig-timing.sh  imgui.ini
scripts/: parameterize_mesh.sh  refine_cone_neighborhoods.py
src/contour_network/: CMakeLists.txt  README.md  compute_closed_contours.cpp  compute_closed_contours.h  compute_contours.cpp  compute_contours.h  compute_curve_frame.cpp  compute_curve_frame.h  compute_cusps.cpp  compute_cusps.h  compute_intersections.cpp  compute_intersections.h  compute_rational_bezier_curve_intersection.cpp  compute_rational_bezier_curve_intersection.h  compute_ray_intersections.cpp  compute_ray_intersections.h  compute_ray_intersections_pencil_method.cpp  compute_ray_intersections_pencil_method.h  contour_network.cpp  contour_network.h  discretize.cpp  discretize.h  evaluate_general_contour_frame.cpp  evaluate_general_contour_frame.h  intersection_data.h  intersection_heuristics.cpp  intersection_heuristics.h  project_curves.cpp  project_curves.h  projected_curve_network.cpp  projected_curve_network.h  ray_intersection_heuristics.cpp  ray_intersection_heuristics.h  sample_general_contour_frame.cpp  sample_general_contour_frame.h  split_contours.cpp  split_contours.h  validity.cpp  validity.h  write_output.cpp  (+1 more)
src/core/: CMakeLists.txt  README.md  abstract_curve_network.cpp  abstract_curve_network.h  affine_manifold.cpp  affine_manifold.h  apply_transformation.cpp  apply_transformation.h  bivariate_quadratic_function.cpp  bivariate_quadratic_function.h  common.h  compute_boundaries.cpp  compute_boundaries.h  conic.cpp  conic.h  convert_conic.cpp  convert_conic.h  convex_polygon.cpp  convex_polygon.h  differentiable_variable.h  evaluate_surface_normal.cpp  evaluate_surface_normal.h  generate_colormap.cpp  generate_colormap.h  generate_flat_metric.cpp  generate_flat_metric.h  generate_transformation.cpp  generate_transformation.h  globals.cpp  halfedge.cpp  halfedge.h  intersect_conic.cpp  intersect_conic.h  interval.cpp  interval.h  line_segment.cpp  line_segment.h  parametrize_conic.cpp  parametrize_conic.h  polynomial_function.cpp  (+4 more)
src/exec/: CMakeLists.txt  generate_algebraic_contours.cpp  generate_hidden_cones.cpp  parameterize_mesh.cpp  view_quadratic_spline.cpp
src/figures/: CMakeLists.txt  add_header_to_csv.cpp  animate_approximation_error.cpp  animate_rotation.cpp  generate_example_figure.cpp  generate_perspective_distortion_figure.cpp  generate_perspective_figure.cpp  generate_smoothness_figure.cpp  generate_timing_data.cpp
src/quadratic_spline_surface/: CMakeLists.txt  PS12_patch_coeffs.h  PS12tri_bounds_coeffs.h  README.md  compute_local_twelve_split_hessian.cpp  compute_local_twelve_split_hessian.h  optimize_spline_surface.cpp  optimize_spline_surface.h  planarH.h  position_data.cpp  position_data.h  powell_sabin_local_to_global_indexing.cpp  powell_sabin_local_to_global_indexing.h  quadratic_spline_surface.cpp  quadratic_spline_surface.h  quadratic_spline_surface_patch.cpp  quadratic_spline_surface_patch.h  twelve_split_spline.cpp  twelve_split_spline.h
src/tests/: CMakeLists.txt  test.cpp  test_affine_manifold.cpp  test_apply_transformation.cpp  test_assemble_matrix.cpp  test_compute_cusps.cpp  test_compute_intersections.cpp  test_compute_ray_intersections.cpp  test_compute_self_intersections.cpp  test_conic.cpp  test_convert_conic.cpp  test_evaluate_surface.cpp  test_halfedge.cpp  test_intersect_conic.cpp  test_optimize_spline_surface.cpp  test_parametrize_conic.cpp  test_polynomial_function.cpp  test_position_data.cpp  test_projected_curve_network.cpp  test_quadratic_spline_surface.cpp  test_rational_function.cpp  test_six_split_spline.cpp  test_triangle_energy.cpp  test_twelve_split_spline.cpp  test_vertex_circulator.cpp
src/util/: CMakeLists.txt  generate_mesh.cpp  generate_mesh.h  generate_parametric_domains.cpp  generate_parametric_domains.h  generate_position_data.cpp  generate_position_data.h  generate_shapes.cpp  generate_shapes.h
